[package]
name = "faucet"
description = "NeonLabs Faucet Service"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-faucet"
version = "0.12.0-dev"
edition = "2021"

[dependencies]
actix-cors = { version = "0.6", default-features = false }
actix-web = { version = "4.1", default-features = false, features = ["macros"] }
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
derive-new = "0.5"
ed25519-dalek = "1.0"
eyre = "0.6"
futures-locks = "0.7"
goblin = "0.5"
hex = "0.4"
lazy_static = "1.4"
minimad = "0.9"
md5 = "0.7"
nix = "0.25"
num_cpus = "1.13"
secp256k1 = "=0.21.3"
serde = { version = "1.0", default_features = false }
serde_json = "1.0"
solana-account-decoder = "=1.9.12"
solana-client = "=1.9.12"
solana-sdk = "=1.9.12"
spl-associated-token-account = { version = "1.0", default_features = false, features = ["no-entrypoint"] }
spl-memo = { version = "3.0", default_features = false, features = ["no-entrypoint"] }
spl-token = { version = "3.2", default_features = false, features = ["no-entrypoint"] }
termimad = "0.20"
thiserror = "1.0"
time = { version = "0.3", default_features = false, features = ["macros"] }
tokio = { version = "1.23", default_features = false, features = ["rt"] }
toml = "0.5"
tracing = "0.1"
tracing-log = "0.1"
# tracing-subscriber with disabled feature "ansi" to force colorless logs
tracing-subscriber = { version = "0.3", default_features = false, features = ["env-filter", "std", "fmt", "json", "time", "local-time", "tracing-log", "smallvec", "parking_lot"] }
web3 = { version = "0.18", path = "rust-web3" }
